--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,7 +8,7 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.12"
-django = "5.0.8"
+django = "^5.0.8"
 ledger-api-client = {git = "https://github.com/dbca-wa/ledger_api_client.git"}
 webtemplate-dbca = {git = "https://github.com/dbca-wa/webtemplate2.git"}
 django-extensions = ">=3.2.3"
@@ -64,6 +64,7 @@ django5-six = {git = "https://github.com/dbca-wa/django5-utils-six.git"}
 django-phonenumber-field = ">=7.3,<8.0"
 babel = ">=2.14,<3.0"
 pytz = "^2020.1"
+setuptools = "^76.0.0"
 
 [tool.poetry.dev-dependencies]
 django-debug-toolbar = ">=3.8"
