--- a/requirements.txt
+++ b/requirements.txt
@@ -2,8 +2,8 @@ appmonitor-client @ git+https://github.com/dbca-wa/appmonitor_client.git@06ba2a1
 asgiref==3.8.1 ; python_version >= "3.12" and python_version < "4.0"
 attrs==25.1.0 ; python_version >= "3.12" and python_version < "4.0"
 babel==2.17.0 ; python_version >= "3.12" and python_version < "4.0"
-boto3==1.36.24 ; python_version >= "3.12" and python_version < "4.0"
-botocore==1.36.24 ; python_version >= "3.12" and python_version < "4.0"
+boto3==1.37.10 ; python_version >= "3.12" and python_version < "4.0"
+botocore==1.37.10 ; python_version >= "3.12" and python_version < "4.0"
 cached-property==2.0.1 ; python_version >= "3.12" and python_version < "4.0"
 certifi==2025.1.31 ; python_version >= "3.12" and python_version < "4.0"
 chardet==5.2.0 ; python_version >= "3.12" and python_version < "4"
@@ -42,7 +42,7 @@ django-taggit==6.1.0 ; python_version >= "3.12" and python_version < "4.0"
 django-treebeard==4.7.1 ; python_version >= "3.12" and python_version < "4.0"
 django-widget-tweaks==1.5.0 ; python_version >= "3.12" and python_version < "4.0"
 django5-six @ git+https://github.com/dbca-wa/django5-utils-six.git@cea09d14209de46156b50d7fb3c2bdf040d2dacb ; python_version >= "3.12" and python_version < "4.0"
-django==5.0.8 ; python_version >= "3.12" and python_version < "4.0"
+django==5.1.7 ; python_version >= "3.12" and python_version < "4.0"
 djangorestframework-csv==3.0.2 ; python_version >= "3.12" and python_version < "4.0"
 djangorestframework-datatables==0.7.2 ; python_version >= "3.12" and python_version < "4.0"
 djangorestframework-gis==1.1 ; python_version >= "3.12" and python_version < "4.0"
@@ -62,7 +62,7 @@ jsonlines==4.0.0 ; python_version >= "3.12" and python_version < "4.0"
 jsonpointer==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
 jsonschema-specifications==2024.10.1 ; python_version >= "3.12" and python_version < "4.0"
 jsonschema==4.23.0 ; python_version >= "3.12" and python_version < "4.0"
-ledger-api-client @ git+https://github.com/dbca-wa/ledger_api_client.git@97cc9261ffc0e9f4a8f18dd1abf2a55353f1868e ; python_version >= "3.12" and python_version < "4.0"
+ledger-api-client @ git+https://github.com/dbca-wa/ledger_api_client.git@5265da4394a07d56bf0ef3fc627800861ffb326e ; python_version >= "3.12" and python_version < "4.0"
 linear-tsv==1.1.0 ; python_version >= "3.12" and python_version < "4.0"
 markdown-it-py==3.0.0 ; python_version >= "3.12" and python_version < "4.0"
 markupsafe==3.0.2 ; python_version >= "3.12" and python_version < "4.0"
@@ -70,7 +70,7 @@ mdurl==0.1.2 ; python_version >= "3.12" and python_version < "4.0"
 mixer==7.2.2 ; python_version >= "3.12" and python_version < "4.0"
 openpyxl==3.1.5 ; python_version >= "3.12" and python_version < "4.0"
 packaging==24.2 ; python_version >= "3.12" and python_version < "4.0"
-phonenumbers==8.13.55 ; python_version >= "3.12" and python_version < "4.0"
+phonenumbers==9.0.0 ; python_version >= "3.12" and python_version < "4.0"
 pillow==11.1.0 ; python_version >= "3.12" and python_version < "4"
 psycopg2-binary==2.9.10 ; python_version >= "3.12" and python_version < "4.0"
 py4j==0.10.9.9 ; python_version >= "3.12" and python_version < "4.0"
@@ -85,8 +85,9 @@ reportlab==4.3.1 ; python_version >= "3.12" and python_version < "4"
 requests==2.32.3 ; python_version >= "3.12" and python_version < "4.0"
 rfc3986==2.0.0 ; python_version >= "3.12" and python_version < "4.0"
 rich==13.9.4 ; python_version >= "3.12" and python_version < "4.0"
-rpds-py==0.22.3 ; python_version >= "3.12" and python_version < "4.0"
-s3transfer==0.11.2 ; python_version >= "3.12" and python_version < "4.0"
+rpds-py==0.23.1 ; python_version >= "3.12" and python_version < "4.0"
+s3transfer==0.11.4 ; python_version >= "3.12" and python_version < "4.0"
+setuptools==76.0.0 ; python_version >= "3.12" and python_version < "4.0"
 six==1.17.0 ; python_version >= "3.12" and python_version < "4.0"
 sqlalchemy==2.0.38 ; python_version >= "3.12" and python_version < "4.0"
 sqlparse==0.5.3 ; python_version >= "3.12" and python_version < "4.0"
@@ -96,7 +97,7 @@ typing-extensions==4.12.2 ; python_version >= "3.12" and python_version < "4.0"
 tzdata==2025.1 ; python_version >= "3.12" and python_version < "4.0"
 unicodecsv==0.14.1 ; python_version >= "3.12" and python_version < "4.0"
 urllib3==2.3.0 ; python_version >= "3.12" and python_version < "4.0"
-webtemplate-dbca @ git+https://github.com/dbca-wa/webtemplate2.git@d226006d599a4e61ca626456c7538aa2b6d130ae ; python_version >= "3.12" and python_version < "4.0"
+webtemplate-dbca @ git+https://github.com/dbca-wa/webtemplate2.git@955544f4acbc770d07da665c7488f89ccb3486ec ; python_version >= "3.12" and python_version < "4.0"
 werkzeug==3.1.3 ; python_version >= "3.12" and python_version < "4.0"
 whitenoise==6.9.0 ; python_version >= "3.12" and python_version < "4.0"
 xlrd==2.0.1 ; python_version >= "3.12" and python_version < "4.0"
