--- a/commercialoperator/frontend/commercialoperator/package.json
+++ b/commercialoperator/frontend/commercialoperator/package.json
@@ -1,62 +1,64 @@
 {
-  "name": "commercialoperator",
-  "version": "1.0.0",
-  "description": "A Vue.js project",
-  "author": "asi@dbca.wa.gov.au",
-  "license": "Apache License 2.0",
-  "private": true,
-  "scripts": {
-    "build": "vue-cli-service build",
-    "serve": "vue-cli-service serve"
-  },
-  "dependencies": {
-    "@babel/runtime": "^7.25.0",
-    "@fortawesome/fontawesome-free": "^6.6.0",
-    "@riophae/vue-treeselect": "^0.4.0",
-    "@vue/cli-service": "^5.0.8",
-    "datatables.net-buttons": "^2.4.3",
-    "datatables.net-bs5": "^1.13.11",
-    "datatables.net-buttons-bs5": "^2.4.3",
-    "datatables.net-responsive-bs5": "^2.5.1",
-    "//": "Dependency of webpack-dev-server. Pinned here to 2.5.3 to avoid index.js not found error in version 2.6.0+",
-    "html-entities": "2.5.3",
-    "jquery": "^3.7.1",
-    "jquery-validation": "^1.21.0",
-    "jquery.easing": "^1.4.1",
-    "jszip": "^3.10.1",
-    "lodash": "^4.17.21",
-    "lodash.defaultsdeep": "^4.6.1",
-    "lodash.mergewith": "^4.6.2",
-    "moment-locales-webpack-plugin": "^1.2.0",
-    "moment-range": "^4.0.2",
-    "select2": "*",
-    "select2-bootstrap-5-theme": "^1.3.0",
-    "sweetalert2": "^11.7.27",
-    "uuid": "^10.0.0",
-    "vee-validate": "<3.0.0",
-    "vue": "^2.7.16",
-    "vue-resource": "^1.5.3",
-    "vue-router": "^2.8.1",
-    "vue-select": "^3.20.2"
-  },
-  "devDependencies": {
-    "depcheck": "^1.4.7",
-    "eslint": "^9.10.0",
-    "eslint-config-prettier": "^9.1.0",
-    "eslint-plugin-prettier": "^5.2.1",
-    "eslint-plugin-vue": "^9.28.0",
-    "globals": "^15.9.0",
-    "prettier": "^3.3.3",
-    "vue-eslint-parser": "^9.4.3",
-    "webpack-bundle-analyzer": "^4.10.2"
-  },
-  "engines": {
-    "node": ">= 20.11.1",
-    "npm": ">= 10.2.4"
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not ie <= 8"
-  ]
+    "name": "commercialoperator",
+    "version": "1.0.0",
+    "description": "A Vue.js project",
+    "author": "asi@dbca.wa.gov.au",
+    "license": "Apache License 2.0",
+    "private": true,
+    "scripts": {
+        "build": "vue-cli-service build",
+        "serve": "vue-cli-service serve"
+    },
+    "dependencies-comments": {
+        "html-entities": "html-entities is a dependency of webpack-dev-server. Pinned here to 2.5.3 to avoid index.js not found error in version 2.6.0+"
+    },
+    "dependencies": {
+        "@babel/runtime": "^7.25.0",
+        "@fortawesome/fontawesome-free": "^6.6.0",
+        "@riophae/vue-treeselect": "^0.4.0",
+        "@vue/cli-service": "^5.0.8",
+        "datatables.net-buttons": "^2.4.3",
+        "datatables.net-bs5": "^1.13.11",
+        "datatables.net-buttons-bs5": "^2.4.3",
+        "datatables.net-responsive-bs5": "^2.5.1",
+        "html-entities": "2.5.3",
+        "jquery": "^3.7.1",
+        "jquery-validation": "^1.21.0",
+        "jquery.easing": "^1.4.1",
+        "jszip": "^3.10.1",
+        "lodash": "^4.17.21",
+        "lodash.defaultsdeep": "^4.6.1",
+        "lodash.mergewith": "^4.6.2",
+        "moment-locales-webpack-plugin": "^1.2.0",
+        "moment-range": "^4.0.2",
+        "select2": "*",
+        "select2-bootstrap-5-theme": "^1.3.0",
+        "sweetalert2": "^11.7.27",
+        "uuid": "^10.0.0",
+        "vee-validate": "<3.0.0",
+        "vue": "^2.7.16",
+        "vue-resource": "^1.5.3",
+        "vue-router": "^2.8.1",
+        "vue-select": "^3.20.2"
+    },
+    "devDependencies": {
+        "depcheck": "^1.4.7",
+        "eslint": "^9.10.0",
+        "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-prettier": "^5.2.1",
+        "eslint-plugin-vue": "^9.28.0",
+        "globals": "^15.9.0",
+        "prettier": "^3.3.3",
+        "vue-eslint-parser": "^9.4.3",
+        "webpack-bundle-analyzer": "^4.10.2"
+    },
+    "engines": {
+        "node": ">= 20.11.1",
+        "npm": ">= 10.2.4"
+    },
+    "browserslist": [
+        "> 1%",
+        "last 2 versions",
+        "not ie <= 8"
+    ]
 }
